raw